# iamai-core

./: .gitignore  .gitmodules  CMakeLists.txt  Program.cs  README.md  TODO.md  iamai-core-lib.cpp  iamai-core-lib.cs  iamai-core-lib.py  iamai-core.csproj  interface.cpp  interface.h  sign_with_certum.bat  test.cpp
chat-demo/: CMakeLists.txt  app.manifest  chat_demo.cpp  chat_demo.h  chat_demo_ui.cpp  main.cpp  settings_manager.cpp  settings_manager.h  win.rc
core/: CMakeLists.txt  folder_manager.cpp  folder_manager.h  iamai-core-lib.cpp  iamai-core.cpp  interface-lib.cpp  interface.cpp  interface.h  main.cpp  model_manager.cpp  model_manager.h  sqlite3.def  sqlite3.exp  sqlite3.h  sqlite3.lib  test-include.cpp  test-interface.cpp  test-library.cpp  test-library.py  test.cpp  whisper-interface-lib.cpp  whisper_interface.cpp  whisper_interface.h  win.rc
core/test-library-cs/: test-library.cs  test-library.csproj  test-library.sln
data/: AAPL_1d.csv
iamai-core-lib-cs/: iamai-core-lib.cs  iamai-core-lib.csproj  iamai-core-lib.sln
test-ggml/: CMakeLists.txt  eval_monthly.cpp  file_utils.h  interface.cpp  interface.h  m4_config.h  m4_dataset.cpp  m4_dataset.h  main.cpp  test.cpp  timeseries_common.cpp  timeseries_common.h  train_monthly.cpp
test-ggml/src/: data.cpp  data.h  main.cpp  model.cpp  model.h
test-llmc/: CMakeLists.txt  interface.cpp  interface.h  test.cpp
test-whisper/: CMakeLists.txt  interface.cpp  interface.h  test.cpp  whisper_interface.cpp  whisper_interface.h
